TestSuite/errors/err0120.pas
var f : file of array[1..3] of string;
begin
end.